--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^0.2.0",
+    "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
-    "next": "6.1.1",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "reactstrap": "^6.5.0"
+    "next": "^8.0.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "reactstrap": "^7.1.0"
   },
   "description": "Example of integration Bootstrap 4 and Next.js",
   "version": "1.0.0",
